Fix 'Unable to open a file created in Umbrello'.

Do not access possible zero pointer.

BUG:377704
FIXED-IN:2.21.80 (KDE Applications 17.03.80)